* Thu Mar 15 2007 Jesse Keating <jkeating@redhat.com>
- Use yum's built in exclude handling
- Use yum's built in conditional handling for things from comps
- Do excludes before group handling.
- Get all potential matches for deps, let install time figure
  the best one to use.

* Tue Mar 14 2007 Jesse Keating <jkeating@redhat.com>
- Do things faster/smarter if we've only asked for one disc

* Tue Mar 13 2007 Jesse Keating <jkeating@redhat.com>
- log the rpm2cpio stuff for release notes
- correctly capture errors from subprocess

* Wed Mar 07 2007 Jesse Keating <jkeating@redhat.com>
- Call createrepo ourselves for the tree, not buildinstall's job

* Tue Mar 06 2007 Jesse Keating <jkeating@redhat.com>
- Convert from commands to subprocess for things we call out

* Fri Mar 02 2007 Jesse Keating <jkeating@redhat.com>
- Add kickstart %packages syntax support to package manifest
- Make the list we hand off to yum to search for as unique as we can

* Wed Feb 28 2007 Jesse Keating <jkeating@redhat.com>
- Update Fedora 7 comps file.
- Tag for F7 Test2

* Mon Feb 26 2007 Jesse Keating <jkeating@redhat.com>
- Fix gathering of srpms (thanks skvidal)

* Wed Feb 21 2007 Jesse Keating <jkeating@redhat.com>
- Don't use TMPDIR with buildinstall for now

* Fri Feb 16 2007 Jesse Keating <jkeating@redhat.com>
- Make use of anaconda's TMPDIR support
- Put yum tempdirs in the workdir
- Add a version option to cli arguments
- Make cdsize a config option

* Thu Feb 15 2007 Jesse Keating <jkeating@redhat.com>
- Various logging tweaks
- Use -d flag in createrepo for sqlite blobs
- Add pydoc stuff to various functions
- Support comments in the package manifest

* Wed Feb 14 2007 Jesse Keating <jkeating@redhat.com>
- Add logging patch from jbowes

* Tue Feb 13 2007 Jesse Keating <jkeating@redhat.com>
- Fix part of the patch from Essien
- Add Contributors to the Authors file
- Adjust the Makefile so that srpm doesn't cause a tag
- Merged changes from Will Woods